--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,8 @@ body{
 ::-webkit-scrollbar-thumb { background-color: hsl(0, 0%, 80%); }
 
 ::-webkit-scrollbar-thumb:hover { background-color: hsl(0, 0%, 70%); }
+
+
+
+
+/* messing with the styles fieldset */
