--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ box-shadow: 0 2px 30px hsla(0, 0%, 0%, 0.1);
     font-size: var(--fs-3); 
 }
 
-.nav-open.btn{
+.nav-open-btn{
     color: var(--color);
     font-size: 13px;
     padding: 4px;
@@ -176,5 +176,13 @@ box-shadow: 0 2px 30px hsla(0, 0%, 0%, 0.1);
 .navbar{
     background-color: var(--white);
     position: fixed;
-    
+top: 0;
+left: 0;
+width: 100%;
+max-width: 280px;
+min-height: 100%;
+padding: 20px;
+visibility: hidden;
+z-index: 2;
+transition: 0.25s var(--cubic-in);
 }
