--- a/styles.css
+++ b/styles.css
@@ -209,3 +209,10 @@ font-size: 4.2rem;
 font-weight: var(--fw-700);
 
 }
+
+.nav-close-btn{
+    color: var(--space-cadet-1);
+    font-size: 2.8rem;
+    padding: 4px;
+}
+
