--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,6 @@ body{
 
 /* header styling */
 
-.overlay,
 .navbar,
 .header .btn{
     display: none;
@@ -226,3 +225,21 @@ font-weight: var(--fw-700);
     font-weight: var(--fw-600) ;
     padding-block: 12px;
 }
+
+
+.overlay{
+    position: fixed;
+    inset: 0;
+    background-color: var(--black_70);
+
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition-2);
+}
+
+.overlay.active{
+    opacity: 1;
+    pointer-events: all;
+}
+
