--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,27 @@
 --white-1: hsl(0, 0%, 100%);
 --black: hsl(0, 0%, 0%);
 --jet: hsl(0, 0%, 20%);
+
+
+
+/* font styling */
+
+--ff-abril-fatface: 'Abril Fatface', cursive;
+--ff-comforter-brush: 'Comforter Brush', cursive;
+--ff-heebo: 'Heebo', sans-serif;
+
+--fs-1: 3.4rem;
+--fs-2: 3.2rem;
+--fs-3: 3rem;
+--fs-4: 2.4rem;
+--fs-5: 1.8rem;
+--fs-6: 1.7rem;
+--fs-7: 1.4rem;
+--fs-8: 1.2rem;
+
+--fw-400: 400;
+--fw-500: 500;
+--fw-600: 600;
+--fw-700: 700;
+
 }
