--- a/styles.css
+++ b/styles.css
@@ -40,4 +40,15 @@
 --fw-600: 600;
 --fw-700: 700;
 
+
+--radius-6: 6px;
+--section-padding: 40px;
+
+
+/* transitions */
+
+--transition-1: 0.15s ease;
+--transition-2: 0.35s ease;
+--cubic-out: cubic-bezier(0.33, 0.85, 0.56, 1.02);
+
 }
