--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /* colors */
 
---battleship-gray: hsl(0, 0%, 53%);
+/* --battleship-gray: hsl(0, 0%, 53%);
 --viridian-green: hsl(180, 98%, 31%);
 --silver-chalice: hsl(0, 0%, 69%);
 --mikado-yellow: hsl(47, 98%, 50%);
@@ -16,13 +16,13 @@
 --white-2: hsl(0, 0%, 98%);
 --white-1: hsl(0, 0%, 100%);
 --black: hsl(0, 0%, 0%);
---jet: hsl(0, 0%, 20%);
+--jet: hsl(0, 0%, 20%); */
 
 
 
 /* font styling */
 
---ff-abril-fatface: 'Abril Fatface', cursive;
+/* --ff-abril-fatface: 'Abril Fatface', cursive;
 --ff-comforter-brush: 'Comforter Brush', cursive;
 --ff-heebo: 'Heebo', sans-serif;
 
@@ -42,7 +42,7 @@
 
 
 --radius-6: 6px;
---section-padding: 40px;
+--section-padding: 40px; */
 
 
 /* transitions */
