--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 
 /* font styling */
 
-/* --ff-abril-fatface: 'Abril Fatface', cursive;
+--ff-abril-fatface: 'Abril Fatface', cursive;
 --ff-comforter-brush: 'Comforter Brush', cursive;
 --ff-heebo: 'Heebo', sans-serif;
 
@@ -42,13 +42,13 @@
 
 
 --radius-6: 6px;
---section-padding: 40px; */
+--section-padding: 40px;
 
 
 /* transitions */
 
---transition-1: 0.15s ease;
+/* --transition-1: 0.15s ease;
 --transition-2: 0.35s ease;
---cubic-out: cubic-bezier(0.33, 0.85, 0.56, 1.02);
+--cubic-out: cubic-bezier(0.33, 0.85, 0.56, 1.02); */
 
 }
