--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,16 @@
 
 /* transitions */
 
-/* --transition-1: 0.15s ease;
+--transition-1: 0.15s ease;
 --transition-2: 0.35s ease;
---cubic-out: cubic-bezier(0.33, 0.85, 0.56, 1.02); */
+--cubic-out: cubic-bezier(0.33, 0.85, 0.56, 1.02);
 
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
