--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+li { list-style: none; }
+
+a { text-decoration: none; }
+
+a,
+img,
+span,
+input,
+button,
+ion-icon { display: block; }
