--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,16 @@ img { height: auto; }
 address { font-style: normal; }
 
 :focus-visible { outline-offset: 5px; }
+
+
+html {
+    font-family: var(--ff-heebo);
+    font-size: 10px;
+    scroll-behavior: smooth;
+  }
+  
+  body {
+    background: var(--white-1);
+    font-size: 1.6rem;
+  }
+  
