new styling to scrollbar

--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,13 @@ html {
     font-size: 1.6rem;
   }
   
+
+  ::-webkit-scrollbar { width: 10px; }
+
+::-webkit-scrollbar-track { background: hsl(0, 0%, 95%); }
+
+::-webkit-scrollbar-thumb { background: hsl(0, 0%, 80%); }
+
+::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
+
+
