--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,8 @@ html {
   }
   
 
-  ::-webkit-scrollbar { width: 10px; }
+
+::-webkit-scrollbar { width: 10px; }
 
 ::-webkit-scrollbar-track { background: hsl(0, 0%, 95%); }
 
@@ -113,3 +114,4 @@ html {
 ::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
 
 
+.navbar{display: none}
