--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,11 @@ html {
   font-size: 35px;
   --ionicon-stroke-width: 40px;
 }
+
+.navbar {
+  width: 100%;
+  padding: 20px 10px;
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition-1);
+}
