--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,12 @@ html {
 }
 
 .navbar-list { margin-bottom: 15px; }
+
+.navbar-link {
+  color: var(--white-1);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-500);
+  padding-block: 10px 0;
+  border-bottom: 2px solid transparent;
+  width: max-content;
+}
