--- a/styles.css
+++ b/styles.css
@@ -233,3 +233,10 @@ body {
 /* HERO SECTION */
 
 .shape { display: none; }
+
+
+.hero {
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom left, top right;
+}
+
