--- a/styles.css
+++ b/styles.css
@@ -245,3 +245,12 @@ body {
 
 .hero .section-subtitle { margin-bottom: 15px; }
 
+.hero-title {
+  color: var(--oxford-blue);
+  font-size: var(--fs-1);
+  font-family: var(--ff-abril-fatface);
+  font-weight: var(--fw-500);
+  line-height: 1.2;
+  max-width: 11ch;
+  margin-bottom: 15px;
+}
