added styling to section subtitle tag

--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,11 @@ body {
 
 .section{padding-block: var(--section-padding)}
 
+.section-subtitle{
+  font-family: var(--ff-comforter-brush);
+  color: var(--aikado-yellow);
+  font-size: var(--fs-3);
+}
 
 
 
