--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,14 @@ body {
   font-weight: var(--fw-400); 
 }
 
+
+.h3{
+font-size: var(--fs-4);
+font-weight: var(--fw-400);
+}
+
+
+
 /* header styling */
 
 
