--- a/styles.css
+++ b/styles.css
@@ -333,3 +333,27 @@ font-weight: var(--fw-400);
   inset: 0;
   background: linear-gradient(hsla(222, 46%, 17%, 0), hsla(222, 46%, 17%, 0.7));
 }
+
+.destination-card img { transition: var(--transition-2); }
+
+.destination-card:is(:hover, :focus) img { transform: scale(1.1); }
+
+.destination-card .card-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px;
+  z-index: 1;
+}
+
+.destination-card .card-subtitle {
+  color: var(--mikado-yellow);
+  font-family: var(--ff-comforter-brush);
+  font-size: var(--fs-5);
+}
+
+.destination-card .card-title {
+  color: var(--white-1);
+  font-family: var(--ff-abril-fatface);
+}
