added initial popular destinations styling

--- a/styles.css
+++ b/styles.css
@@ -357,3 +357,7 @@ font-weight: var(--fw-400);
   color: var(--white-1);
   font-family: var(--ff-abril-fatface);
 }
+
+
+/* POPULAR DESTINATION */
+
