--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,18 @@ font-weight: var(--fw-400);
 }
 
 
+:is(.popular, .blog) .card-banner { position: relative; }
+
+
+.card-badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: var(--mikado-yellow);
+  color: var(--white-1);
+  padding: 14px 10px;
+  border-radius: var(--radius-6);
+}
 
 
 /* header styling */
