--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,16 @@ font-weight: var(--fw-400);
   border-radius: var(--radius-6);
 }
 
+.card-badge ion-icon {
+  --ionicon-stroke-width: 60px;
+  font-size: 20px;
+  margin-inline: auto;
+}
+
+
+
+
+
 
 /* header styling */
 
