--- a/styles.css
+++ b/styles.css
@@ -453,3 +453,19 @@ font-weight: var(--fw-400);
 .about .section-subtitle { margin-bottom: 10px; }
 
 .about .section-title { margin-bottom: 20px; }
+
+
+about-text,
+.about-item-text {
+  color: var(--battleship-gray);
+  font-size: var(--fs-6);
+  line-height: 1.7;
+}
+
+.about-text { margin-bottom: 30px; }
+
+.about-list {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 40px;
+}
