--- a/styles.css
+++ b/styles.css
@@ -469,3 +469,24 @@ about-text,
   gap: 20px;
   margin-bottom: 40px;
 }
+
+.about-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+}
+
+.about-item-icon {
+  background: var(--viridian-green);
+  color: var(--white-1);
+  font-size: 26px;
+  padding: 16px;
+  border-radius: 50%;
+  margin-top: 5px;
+}
+
+.about-item-title {
+  color: var(--granite-gray);
+  font-weight: var(--fw-600);
+  margin-bottom: 5px;
+}
