--- a/styles.css
+++ b/styles.css
@@ -506,3 +506,11 @@ about-text,
   align-items: center;
   gap: 15px;
 }
+
+.blog-card .card-wrapper {
+  color: var(--spanish-gray);
+  font-size: var(--fs-8);
+  justify-content: space-between;
+}
+
+
