--- a/styles.css
+++ b/styles.css
@@ -518,3 +518,17 @@ about-text,
   color: var(--granite-gray);
   font-weight: var(--fw-500);
 }
+
+
+.btn-link {
+  color: var(--viridian-green);
+  font-weight: var(--fw-700);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 5px;
+}
+
+.btn-link ion-icon { font-size: 20px; }
+
+.btn-link:is(:hover, :focus) { color: var(--oxford-blue); }
